--- a/todo
+++ b/todo
@@ -1,6 +1,7 @@
 1) Add a spacer - Done May 5 , 4:38 pm
 2) Make a list of all the necessary styles
 	2a) Put them in a separate file
+	  -- Complete this today.
 3) give the ability to give the shell
 4) Enable embedded javascript
 5) Add additional drop down types
@@ -20,3 +21,11 @@ $("#target").keypress(function(e) {
 
 				});
 
+<div ct_box
+	ctbox
+	body {
+	font-family: "Whitney SSm A","Whitney SSm B","ff-meta-web-pro",sans-serif;
+	font-size: 16px;
+	color: #333;
+	line-height: 1.4;
+	}
